# hackathonuOttahack8

./: .env  .gitignore  .gitmodules  README.md  docker-compose.yaml  orchestrator.db  package-lock.json  requirements.txt  webui_gateway.db
backend/: reaction_processor.py  test_hook.py
backend/bridge/: CMakeLists.txt  bridge.cpp
backend/bridge/my_env11/: pyvenv.cfg
backend/bridge/my_env11/Scripts/: activate  activate.bat
backend/configs/agents/: vitals_specialist_agent.yaml
backend/tools/: spectra_tools.py
configs/agents/: shared_config.yaml  vitals_specialist.yaml
presage-sensor/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
presage-sensor/src/: App.css  App.tsx  EmotionAnalyzer.tsx  main.ts  main.tsx  solace.d.ts
